--- a/Osiris_spoiler.html
+++ b/Osiris_spoiler.html
@@ -96,7 +96,7 @@
         .empty-placeholder {
             width: 100%;
             max-height: 100%;
-            background: url('../img/default.png') center/contain no-repeat;
+            background: url('img/default.png') center/contain no-repeat;
         }
 
         #copyButton {
@@ -148,7 +148,7 @@
             </div>
         </div>
         <div class="preview-container">
-        <img id="fullCardPreview" class="full-card-preview" src="../img/default.png" alt="Full Card Preview">
+        <img id="fullCardPreview" class="full-card-preview" src="img/default.png" alt="Full Card Preview">
         <div class="preview-container">
     </div>
     <button id="backButton" onclick="window.location.href='index.html';">
@@ -213,7 +213,7 @@ const imageData = {
         ],
     };
 
-        const basePath = '../img/Osiris/';
+        const basePath = 'img/Osiris/';
         const fullCardPreview = document.getElementById('fullCardPreview');
 
         Object.keys(imageData).forEach(column => {
