--- a/XVX_spoiler.html
+++ b/XVX_spoiler.html
@@ -93,7 +93,7 @@
         .empty-placeholder {
             width: 100%;
             max-height: 100%;
-            background: url('img/default.png') center/contain no-repeat;
+            background: url('OVX/img/default.png') center/contain no-repeat;
         }
 
         #copyButton {
@@ -144,7 +144,7 @@
             </div>
         </div>
         <div class="preview-container">
-        <img id="fullCardPreview" class="full-card-preview" src="img/default.png" alt="Full Card Preview">
+        <img id="fullCardPreview" class="full-card-preview" src="OVX/img/default.png" alt="Full Card Preview">
         <div class="preview-container">
     </div>
     <button id="backButton" onclick="window.location.href='index.html';">
@@ -206,7 +206,7 @@
             ],
         };
 
-        const basePath = 'img/XVX/';
+        const basePath = 'OVX/img/XVX/';
         const fullCardPreview = document.getElementById('fullCardPreview');
 
         Object.keys(imageData).forEach(column => {
