removed unnecessary code

--- a/Osiris_spoiler.html
+++ b/Osiris_spoiler.html
@@ -96,7 +96,7 @@
         .empty-placeholder {
             width: 100%;
             max-height: 100%;
-            background: url('OVX/img/default.png') center/contain no-repeat;
+            background: url('img/default.png') center/contain no-repeat;
         }
 
         #copyButton {
@@ -152,7 +152,7 @@
         <div class="preview-container">
     </div>
     <button id="backButton" onclick="window.location.href='index.html';">
-        <img src="OVX/img/back.png" alt="Back">
+        <img src="img/back.png" alt="Back">
     </button>
     <button id="copyButton" onclick="copyToClipboard()">Copy Deck to Clipboard</button>
     <script>
@@ -213,7 +213,7 @@ const imageData = {
         ],
     };
 
-        const basePath = 'OVX/img/Osiris/';
+        const basePath = 'img/Osiris/';
         const fullCardPreview = document.getElementById('fullCardPreview');
 
         Object.keys(imageData).forEach(column => {
