updated image dump url

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         updateUI();
 
         function openScrap() {
-            window.open("https://imgur.com/a/tDijkIm", "_blank");
+            window.open("https://imgur.com/a/secret-santa-decklist-dump-GN6uAuW", "_blank");
         }
     </script>
 </body>
