--- a/Osiris_spoiler.html
+++ b/Osiris_spoiler.html
@@ -176,7 +176,7 @@
                     { name: 'Osiris Chaser', count: 4 },
                     { name: 'Fatal Crash', count: 3 },
                     { name: 'Over-Rev', count: 3 },
-                    { name: 'Multiboost', count: 2 },
+                    { name: 'Multiboost', count: 4 },
                     { name: 'Team Lounge', count: 2 },
                 ],
                 two: [
@@ -185,8 +185,8 @@
                     { name: 'Orissa\'s Talent', count: 1 },
                 ],
                 three: [
-                    { name: 'Orissa\'s Rivalry', count: 2 },
-                    { name: 'Refuel', count: 2 },
+                    { name: 'Orissa\'s Rivalry', count: 1 },
+                    { name: 'Refuel', count: 1 },
                     { name: 'Surge MV', count: 2 },
                     { name: 'Test Drive', count: 2 },
                 ],
@@ -194,10 +194,10 @@
                     { name: 'Osiris GT M2', count: 2 },
                     { name: 'Kiss Goodbye', count: 2 },
                 ],
-                five: [],
-                six: [
+                five: [
                     { name: 'Grand Finale', count: 2 },
                 ],
+                six: [],
                 seven: [],
                 sideboard: [
                     { name: 'Bifurcated Crash', count: 2 },
