--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
         updateUI();
 
         function openDump() {
-            window.open("https://imgur.com/a/QuV72yo", "_blank");
+            window.open("https://imgur.com/a/2VmftvC", "_blank");
         }
     </script>
 </body>
